--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,10 +15,8 @@
   </ul>
 <% end %>
 
-
-
-    <% if current_user %>
-      Welcome, <%= current_user.email %>
+    <% if @current_user %>
+      Welcome, <%= @current_user.email %>
     <% end %>
     <%= yield %>
   </body>
