--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,16 +7,18 @@
   <body>
 
    <% if flash[:errors] && !flash[:errors].empty? %>
-  Please refer to the following errors below:
-  <ul id='errors'>
-    <% flash[:errors].each do |error| %>
+    Please refer to the following errors below:
+   <ul id='errors'>
+   <% flash[:errors].each do |error| %>
       <li><%= error %></li>
     <% end %>
   </ul>
-<% end %>
-    <% if @current_user %>
-      Welcome, <%= @current_user.email %>
+  <% end %>
+
+    <% if current_user %>
+      Welcome, <%= current_user.email %>
     <% end %>
+
     <%= yield %>
   </body>
 </html>
