--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,6 +17,14 @@
 
     <% if current_user %>
       Welcome, <%= current_user.email %>
+      <form method='post' action='/sessions'>
+        <input type='hidden' name='_method' value='delete'>
+        <input type='submit' value='Sign out'>
+      </form>
+    <% end %>
+
+    <% if flash[:logged_out] %>
+      <p> <%= flash[:logged_out] %></p>
     <% end %>
 
     <%= yield %>
